--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "zone.js": "~0.10.3"
     },
     "devDependencies": {
+        "@agm/core": "^1.0.0",
         "@angular-devkit/build-angular": "^0.1100.3",
         "@angular/cli": "~10.0.5",
         "@angular/compiler-cli": "~10.0.6",
